--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
         tools:node="remove" />
     <uses-permission android:name="com.futsch1.medtimer.NOTIFICATION_PROCESSED" />
     <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
+    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT"
+        tools:ignore="FullScreenIntentPolicy" />
 
     <application
         android:allowBackup="false"
@@ -52,6 +54,12 @@
         <activity
             android:name=".MedTimerAppIntro"
             android:theme="@style/Theme.MedTimer" />
+        <activity
+            android:name=".ReminderAlarmActivity"
+            android:exported="false"
+            android:launchMode="standard"
+            android:showOnLockScreen="true"
+            android:turnScreenOn="true" />
 
         <receiver
             android:name=".Autostart"
