--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         tools:node="remove" />
     <uses-permission android:name="com.futsch1.medtimer.NOTIFICATION_PROCESSED" />
     <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
-    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT"
+    <uses-permission
+        android:name="android.permission.USE_FULL_SCREEN_INTENT"
         tools:ignore="FullScreenIntentPolicy" />
 
     <application
@@ -55,8 +56,8 @@
             android:name=".MedTimerAppIntro"
             android:theme="@style/Theme.MedTimer" />
         <activity
-            android:name=".ReminderAlarmActivity"
-            android:exported="false"
+            android:name=".alarm.ReminderAlarmActivity"
+            android:exported="true"
             android:launchMode="standard"
             android:showOnLockScreen="true"
             android:turnScreenOn="true" />
