--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,8 +57,8 @@
             android:theme="@style/Theme.MedTimer" />
         <activity
             android:name=".alarm.ReminderAlarmActivity"
-            android:exported="true"
-            android:launchMode="standard"
+            android:exported="false"
+            android:launchMode="singleTop"
             android:showOnLockScreen="true"
             android:turnScreenOn="true" />
 
