--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -87,10 +87,11 @@ jobs:
         if: github.ref == 'refs/heads/main'
 
       - uses: qltysh/qlty-action/coverage@a19242102d17e497f437d7466aa01b528537e899 # v2.2.0
+        env:
+          JACOCO_SOURCE_PATH: app/src/main/java app/build/generated/java/generateSafeArgsDebug app/build/generated/ap_generated_sources/debug/out
         with:
           oidc: true
           files: app/build/reports/jacoco/JacocoDebugCodeCoverage/JacocoDebugCodeCoverage.xml
-          add-prefix: app/src/main/java
 
       - name: SonarQube
         env:
