Input snooze time via RemoteInput

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -137,6 +137,13 @@
             </intent-filter>
 
         </receiver>
+        <receiver
+            android:name="com.futsch1.medtimer.reminders.RemoteInputReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.futsch1.medtimer.REMOTE_INPUT_SNOOZE_ACTION" />
+            </intent-filter>
+        </receiver>
 
     </application>
 
