Variable amount action via RemoteInput

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -142,6 +142,7 @@
             android:exported="false">
             <intent-filter>
                 <action android:name="com.futsch1.medtimer.REMOTE_INPUT_SNOOZE_ACTION" />
+                <action android:name="com.futsch1.medtimer.REMOTE_INPUT_VARIABLE_AMOUNT_ACTION" />
             </intent-filter>
         </receiver>
 
