--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,10 +85,10 @@
             android:permission="com.futsch1.medtimer.NOTIFICATION_PROCESSED"
             tools:ignore="ExportedReceiver">
             <intent-filter>
-                <action android:name="com.futsch1.medTimer.REMINDER_ACTION" />
-                <action android:name="com.futsch1.medTimer.RESCHEDULE_ACTION" />
-                <action android:name="com.futsch1.medTimer.DISMISSED_ACTION" />
-                <action android:name="com.futsch1.medTimer.TAKEN_ACTION" />
+                <action android:name="com.futsch1.medtimer.REMINDER_ACTION" />
+                <action android:name="com.futsch1.medtimer.RESCHEDULE_ACTION" />
+                <action android:name="com.futsch1.medtimer.DISMISSED_ACTION" />
+                <action android:name="com.futsch1.medtimer.TAKEN_ACTION" />
             </intent-filter>
         </receiver>
 
