Remove gradle warnings

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,10 +20,8 @@ android.useAndroidX=true
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 org.gradle.configuration-cache=true
-android.defaults.buildfeatures.resvalues=true
-android.usesSdkInManifest.disallowed=false
 android.uniquePackageNames=false
-android.dependency.useConstraints=true
+android.dependency.useConstraints=false
 android.r8.strictFullModeForKeepRules=false
 # Disable the new DSL until the SonarQube plugin was updated
 android.newDsl=false
