--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,15 +82,7 @@
             android:name=".reminders.ReminderWorkerReceiver"
             android:enabled="true"
             android:exported="false"
-            android:permission="com.futsch1.medtimer.NOTIFICATION_PROCESSED"
-            tools:ignore="ExportedReceiver">
-            <intent-filter>
-                <action android:name="com.futsch1.medtimer.REMINDER_ACTION" />
-                <action android:name="com.futsch1.medtimer.RESCHEDULE_ACTION" />
-                <action android:name="com.futsch1.medtimer.DISMISSED_ACTION" />
-                <action android:name="com.futsch1.medtimer.TAKEN_ACTION" />
-            </intent-filter>
-        </receiver>
+            android:permission="com.futsch1.medtimer.NOTIFICATION_PROCESSED" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
