--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -96,7 +96,8 @@
 
         <receiver
             android:name=".widgets.NextRemindersWidgetProvider"
-            android:exported="false">
+            android:exported="false"
+            android:label="@string/next_reminders">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -107,7 +108,8 @@
         </receiver>
         <receiver
             android:name=".widgets.LatestRemindersWidgetProvider"
-            android:exported="false">
+            android:exported="false"
+            android:label="@string/recent_events">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
